fixed bugs shown in commit message body: Fix  verification code resend button and error toast remove bad logo in sign in, sign up and verification page Add logout in activiation page to be able to return Edit/My Profile buttons were buggy needs to click only text (fixed) Create Post Modal's top wsa hidden under the navbar issue sign-in/up and verification screen images enhanced Add family name with authot in community space comment can be deleted by post author and comment author comment can be edited only by post author (BE) In mobile page, whe My Profile, Edit Prodile and Signout dropdown dissappears (fixed) Wrong Page description besides title fixed

--- a/code-react/src/assets/scss/bootstrap/_modal.scss
+++ b/code-react/src/assets/scss/bootstrap/_modal.scss
@@ -35,12 +35,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: var(--#{$prefix}modal-zindex);
+  z-index: 2000 ;//var(--#{$prefix}modal-zindex);
   display: none;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  padding-top: 11rem; /* Default for extra small devices */
+  margin-top: 11rem; /* Default for extra small devices */
   // Prevent Chrome on Windows from adding a focus outline. For details, see
   // https://github.com/twbs/bootstrap/pull/10951.
   outline: 0;
